{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 37,
  "lineage": "d84c4b18-bcc2-739b-c3a3-cf86ea54ea75",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dev-vm1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/networkInterfaces/nic-dev-vm-1",
            "internal_domain_name_suffix": "f0vgoda5seuurnhu5wfx11e1kf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dev-vm-1-private-ip",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/publicIPAddresses/pip-vmdev1",
                "subnet_id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/virtualNetworks/vnet-dev-env/subnets/subnet-dev-1"
              }
            ],
            "location": "uksouth",
            "mac_address": "7C-1E-52-02-DD-59",
            "name": "nic-dev-vm-1",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "rg-lou-dev-env",
            "virtual_machine_id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Compute/virtualMachines/vmdev1"
          },
          "dependencies": [
            "azurerm_public_ip.vmdev1-pip",
            "azurerm_resource_group.dev-rg",
            "azurerm_subnet.dev-subnet-1",
            "azurerm_virtual_network.dev-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dev-vm2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/networkInterfaces/nic-dev-vm-2",
            "internal_domain_name_suffix": "f0vgoda5seuurnhu5wfx11e1kf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dev-vm-2-private-ip",
                "primary": true,
                "private_ip_address": "10.0.1.22",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/virtualNetworks/vnet-dev-env/subnets/subnet-dev-1"
              }
            ],
            "location": "uksouth",
            "mac_address": "60-45-BD-D2-DA-FB",
            "name": "nic-dev-vm-2",
            "private_ip_address": "10.0.1.22",
            "private_ip_addresses": [
              "10.0.1.22"
            ],
            "resource_group_name": "rg-lou-dev-env",
            "virtual_machine_id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Compute/virtualMachines/vmdev2"
          },
          "dependencies": [
            "azurerm_resource_group.dev-rg",
            "azurerm_subnet.dev-subnet-1",
            "azurerm_virtual_network.dev-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dev-subnet-1-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-subnet-1",
            "location": "uksouth",
            "name": "nsg-dev-subnet-1",
            "resource_group_name": "rg-lou-dev-env",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.dev-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowPing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.22",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-subnet-1/securityRules/AllowPingFromvmdev1",
            "name": "AllowPingFromvmdev1",
            "network_security_group_name": "nsg-dev-subnet-1",
            "priority": 110,
            "protocol": "Icmp",
            "resource_group_name": "rg-lou-dev-env",
            "source_address_prefix": "10.0.1.11",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dev-subnet-1-nsg",
            "azurerm_resource_group.dev-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowRDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-subnet-1/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "nsg-dev-subnet-1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-lou-dev-env",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dev-subnet-1-nsg",
            "azurerm_resource_group.dev-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vmdev1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/publicIPAddresses/pip-vmdev1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.145.118.227",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pip-vmdev1",
            "resource_group_name": "rg-lou-dev-env",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.dev-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dev-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/virtualNetworks/vnet-dev-env/subnets/subnet-dev-1",
            "name": "subnet-dev-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lou-dev-env",
            "virtual_network_name": "vnet-dev-env"
          },
          "dependencies": [
            "azurerm_resource_group.dev-rg",
            "azurerm_virtual_network.dev-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/virtualNetworks/vnet-dev-env/subnets/subnet-dev-1",
            "network_security_group_id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-subnet-1",
            "subnet_id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/virtualNetworks/vnet-dev-env/subnets/subnet-dev-1"
          },
          "dependencies": [
            "azurerm_network_security_group.dev-subnet-1-nsg",
            "azurerm_resource_group.dev-rg",
            "azurerm_subnet.dev-subnet-1",
            "azurerm_virtual_network.dev-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dev-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0c67aa2e-911f-4829-b4f4-fd8b7dec9b55",
            "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/virtualNetworks/vnet-dev-env",
            "location": "uksouth",
            "name": "vnet-dev-env",
            "resource_group_name": "rg-lou-dev-env",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/virtualNetworks/vnet-dev-env/subnets/subnet-dev-1",
                "name": "subnet-dev-1",
                "security_group": "/subscriptions/f658e370-512a-4d13-a7a0-90c19f2246dd/resourceGroups/rg-lou-dev-env/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-subnet-1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.dev-rg"
          ]
        }
      ]
    }
  ]
}